--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "new-year-new-me",
   "version": "1.0.0",
   "description": "New Years resolution tracker",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon"
   },
   "author": "Tobie Tsuzuki",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "knex": "^0.20.4",
+    "pg": "^7.15.1"
+  }
 }
