--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "New Years resolution tracker",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js ",
     "dev": "nodemon"
   },
   "author": "Tobie Tsuzuki",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.20.4",
     "pg": "^7.15.1"
